fix for file overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -175,6 +175,7 @@ pre {
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow-x: auto;
+  max-width: 100%;
 }
 pre > code {
   all: unset;
